--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,21 +1,34 @@
+
+
+/* globals.css */
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
 
-:root {
-  --background: #ffffff;
-  --foreground: #171717;
-}
 
-@media (prefers-color-scheme: dark) {
   :root {
-    --background: #0a0a0a;
+         /* Darker */
     --foreground: #ededed;
+    --card-background: rgba(7, 14, 22, 0.8);  /* Darker */
+    --card-gradient-from: #050b13;  /* Darker */
+    --card-gradient-to: #0d1c2b;    /* Darker */
+    --metric-background: #111927;   /* Darker */
+    --accent-color: #3CD3C1;
+    --text-primary: #ffffff;
+    --text-secondary: #94a3b8;
   }
-}
+
 
 body {
+  
   color: var(--foreground);
-  background: var(--background);
+  background: linear-gradient(135deg, #0d1926 0%, #163346 100%);
+  background: linear-gradient(
+    to top,
+    transparent,
+    #1b2d41
+  )
+  #10293a ;
+  
   font-family: Arial, Helvetica, sans-serif;
 }
